<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_1">
        <ListPreference
            android:key="pref_protocol"
            android:title="@string/pref_protocol_title"
            android:dialogTitle="@string/pref_protocol_title"
            android:entries="@array/pref_protocol_entries"
            android:entryValues="@array/pref_protocol_entries"
            android:defaultValue="UDP"/>
        <EditTextPreference
            android:key="pref_serverIP"
            android:title="@string/pref_serverIP_title"
            android:defaultValue="127.0.0.1"/>
        <EditTextPreference
            android:key="pref_serverPort"
            android:title="@string/pref_serverPort_title"
            android:inputType="number"
            android:defaultValue="50000"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_2">
        <EditTextPreference
            android:key="pref_frameSize"
            android:title="@string/pref_frameSize_title"
            android:summary="@string/pref_frameSize_sum"
            android:inputType="number"
            android:defaultValue="200"/>
        <EditTextPreference
            android:key="pref_packetSize"
            android:title="@string/pref_packetSize_title"
            android:summary="@string/pref_packetSize_sum"
            android:inputType="number"
            android:defaultValue="30"/>
        <EditTextPreference
            android:key="pref_flow"
            android:title="@string/pref_flow_title"
            android:summary="@string/pref_flow_sum"
            android:inputType="number"
            android:defaultValue="20"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_3">
        <SwitchPreference
            android:key="pref_packet_seq"
            android:title="@string/pref_pSeq_title"
            android:defaultValue="false"/>
        <SwitchPreference
            android:key="pref_frame_seq"
            android:title="@string/pref_fSeq_title"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>