<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launch_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soraookami.packetlauncher.LaunchPanel">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panel_prefs_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_protocol_title"
            android:id="@+id/panel_protocol" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_serverIP_title"
            android:id="@+id/panel_serverIP" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_serverPort_title"
            android:id="@+id/panel_serverPort" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_frameSize_title"
            android:id="@+id/panel_frameSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_packetSize_title"
            android:id="@+id/panel_packetSize" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_flow_title"
            android:id="@+id/panel_flow" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panel_status_title"
        android:id="@+id/panel_status_title"
        android:layout_above="@+id/editText"/>

    <Button
        android:text="@string/panel_launchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/launchButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="startLaunch"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:focusable="false"
        android:clickable="false"
        android:scrollbars="vertical"
        android:layout_above="@+id/launchButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>
